[package]
name = "mcp-openapi"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.11", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.7"
tokio-util = "0.7"
